// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AdUnit does render correctly in debug mode 1`] = `
<div
  className="ad-unit ad-unit--desktop"
  id="ad-42"
  style={
    Object {
      "height": "250px",
      "width": "300px",
    }
  }
>
  <div
    className="ad-unit-debug"
    onClick={[Function]}
    style={
      Object {
        "background": "green",
      }
    }
  >
    <input
      checked={true}
      className="debug-checkbox"
      type="checkbox"
    />
    <p>
      ad-42
    </p>
    <p>
      300x250
    </p>
  </div>
</div>
`;

exports[`AdUnit does render when ad feature is enabled 1`] = `
<div
  className="ad-unit ad-unit--desktop"
  id="ad-42"
  style={
    Object {
      "height": "250px",
      "width": "300px",
    }
  }
/>
`;
